iron flex layout updates

--- a/src/file/stv-file-browser.html
+++ b/src/file/stv-file-browser.html
@@ -8,8 +8,7 @@
 
 
 <dom-module id="stv-file-browser">
-    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
-    <style>
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
         :host {
             display: block;
             position: relative;
