--- a/src/file/stv-folder-list.html
+++ b/src/file/stv-folder-list.html
@@ -4,8 +4,7 @@
 <link rel="import" href="stv-folder-create.html">
 <link rel="import" href="stv-folder-list-item.html">
 <dom-module id="stv-folder-list">
-    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
-    <style>
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
         :host {
             position: relative;
             display: block;
