--- a/src/job/stv-job-browser.html
+++ b/src/job/stv-job-browser.html
@@ -2,8 +2,7 @@
 <link rel="import" href="../../../iron-flex-layout/iron-flex-layout-classes.html">
 <link rel="import" href="stv-job-item.html">
 <dom-module id="stv-job-browser">
-    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
-    <style>
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
         :host {
             position: relative;
             display: block;
