--- a/src/stv-header.html
+++ b/src/stv-header.html
@@ -7,8 +7,7 @@
 <link rel="import" href="stv-remember.html">
 
 <dom-module id="stv-header">
-    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
-    <style>
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
         :host {
             position: relative;
             display: block;
