--- a/src/stv-profile.html
+++ b/src/stv-profile.html
@@ -1,7 +1,6 @@
 <link rel="import" href="../../polymer/polymer.html">
 <dom-module id="stv-profile">
-    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
-    <style>
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
         :host {
             display: block;
             position: absolute;
