--- a/src/table/stv-table.html
+++ b/src/table/stv-table.html
@@ -3,8 +3,7 @@
 <script src="../../../file-saver.js/FileSaver.js"></script>
 
 <dom-module id="stv-table">
-    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
-    <style>
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
         :host {
             display: block;
             position: relative;
