--- a/src/validator/stv-validator.html
+++ b/src/validator/stv-validator.html
@@ -7,8 +7,7 @@
 <script src="vcf-validator.js"></script>
 
 <dom-module name="stv-validator" noscript>
-    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
-    <style>
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
         :host {
             display: block;
             position: relative;
