--- a/src/file/stv-file-upload.html
+++ b/src/file/stv-file-upload.html
@@ -5,8 +5,7 @@
 <link rel="import" href="../validator/stv-validator.html">
 
 <dom-module id="stv-file-upload">
-    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
-    <style>
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
         :host {
             display: block;
             position: relative;
