--- a/src/file/stv-folder-create.html
+++ b/src/file/stv-folder-create.html
@@ -2,8 +2,7 @@
 <link rel="import" href="../../../iron-flex-layout/iron-flex-layout-classes.html">
 
 <dom-module id="stv-folder-create">
-    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
-    <style>
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
         :host {
             display: block;
         }
