--- a/src/stv-import-file.html
+++ b/src/stv-import-file.html
@@ -4,8 +4,7 @@
 <link rel="import" href="../validator/stv-validator.html">
 
 <dom-module id="stv-import-file">
-    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning"></style>
-    <style>
+    <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
         :host {
             display: block;
             position: relative;
