--- a/src/stv-feedback.html
+++ b/src/stv-feedback.html
@@ -2,18 +2,25 @@
 <link rel="import" href="../../iron-flex-layout/iron-flex-layout-classes.html">
 <dom-module id="stv-feedback">
     <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
-    :host {
-        display: block;
-        position: relative;
-        box-sizing: border-box;
-        box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.4);
-    }
+        :host {
+            display: block;
+            position: relative;
+            box-sizing: border-box;
+            box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.4);
+        }
     </style>
     <template>
-      <div on-mousedown="handleShowMenu">
-          <i class="fa fa-lightbulb-o"></i> &nbsp; Feedback
-      </div>
-
+        <div id="">
+            <i class="fa fa-bolt"></i> &nbsp; Feedback
+        </div>
+        <div id="">
+          <div on-mousedown="handleExample">
+              <i class="fa fa-envelope-o" aria-hidden="true"></i> &nbsp; Send an email
+          </div>
+          <a href="{{url}}" target="_blank">
+              <i class="fa fa-exclamation-circle" aria-hidden="true"></i> &nbsp; Go to git issue
+          </a>
+        </div>
     </template>
 
     <script>
@@ -23,8 +30,8 @@
 
             },
             ready: function() {},
-            handleShowMenu: function(e){
-              debugger
+            handleShowMenu: function(e) {
+                debugger
             }
         })
     </script>
