--- a/src/stv-dialog/demo/index.html
+++ b/src/stv-dialog/demo/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <script src="../bower_components/webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="../../../webcomponentsjs/webcomponents-lite.js"></script>
     <link rel="import" href="../stv-dialog.html">
     <style is="custom-style">
     </style>
