--- a/src/stv-dialog/index.html
+++ b/src/stv-dialog/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <title>stv-dialog</title>
-    <script src="bower_components/webcomponentsjs/webcomponents-lite.js"></script>
-    <link rel="import" href="bower_components/iron-component-page/iron-component-page.html">
+    <script src="../../../webcomponentsjs/webcomponents-lite.js"></script>
+    <link rel="import" href="../../../iron-component-page/iron-component-page.html">
 </head>
 <body>
     <iron-component-page></iron-component-page>
