--- a/src/stv-dialog/stv-dialog.html
+++ b/src/stv-dialog/stv-dialog.html
@@ -1,5 +1,5 @@
-<link rel="import" href="bower_components/polymer/polymer.html">
-<link rel="import" href="bower_components/iron-flex-layout/iron-flex-layout-classes.html">
+<link rel="import" href="../../../polymer/polymer.html">
+<link rel="import" href="../../../iron-flex-layout/iron-flex-layout-classes.html">
 <!--
 `<stv-dialog>` allows the user to emulate the behavior of window.confirm(), window.alert() and window.prompt().
 
