--- a/src/stv-dialog/test/basic.html
+++ b/src/stv-dialog/test/basic.html
@@ -4,9 +4,12 @@
     <meta charset="UTF-8">
     <title>Title</title>
 
-    <script src="../../../webcomponentsjs/webcomponents-lite.js"></script>
-    <script src="../../../web-component-tester/browser.js"></script>
+    <script src="../../webcomponentsjs/webcomponents-lite.js"></script>
+    <script src="../../web-component-tester/browser.js"></script>
 
+    <!-- import element to test and its dependencies -->
+    <link rel="import" href="../../polymer/polymer.html">
+    <link rel="import" href="../../iron-flex-layout/iron-flex-layout.html">
     <link rel="import" href="../stv-dialog.html">
 </head>
 <body>
