--- a/test/basic.html
+++ b/test/basic.html
@@ -8,9 +8,7 @@
     <script src="../../web-component-tester/browser.js"></script>
 
     <!-- import element to test and its dependencies -->
-    <link rel="import" href="../../polymer/polymer.html">
-    <link rel="import" href="../../iron-flex-layout/iron-flex-layout.html">
-    <link rel="import" href="../stv-dialog.html">
+    <link rel="import" href="../src/stv-dialog/stv-dialog.html">
 </head>
 <body>
 
