--- a/src/stv-feedback.html
+++ b/src/stv-feedback.html
@@ -4,7 +4,7 @@
     <style is="custom-style" include="iron-flex iron-flex-reverse iron-flex-alignment iron-flex-factors iron-positioning">
         :host {
             display: block;
-            position: relative;
+            position: absolute;
             box-sizing: border-box;
             box-shadow: 0px 0px 2px 0px rgba(0, 0, 0, 0.4);
             padding: 5px;
@@ -16,12 +16,14 @@
             min-width: 500px;
             min-height: 500px;
             padding: 5px;
+            top: 60px;
+            left: 500px;
         }
 
         .send {
             margin: 0 auto;
             width: 100px;
-            margin-top: 5px;
+            margin-top: 20px;
         }
 
         #emailContent {
@@ -32,9 +34,15 @@
             color: #666;
             margin: 10px 5px 5px 5px;
         }
+
+        textarea {
+            height: 300px;
+            width: 425px;
+            margin-left: 10px
+        }
     </style>
     <template>
-        <stv-panel id="emailPanel" modal closable>
+        <stv-panel id="emailPanel" modal closable on-close="handleFeedback">
             <div class="header">
                 <i class="fa fa-envelope-o"></i> Send an email
             </div>
@@ -52,7 +60,7 @@
                 </div>
 
                 <div class="data" for="">Text &nbsp; </div>
-                <textarea class="stv" style="height: 300px; width:400px" name="" id="" cols="30" rows="10" value="{{text::input}}"></textarea>
+                <textarea class="stv" name="" id="" cols="30" rows="10" value="{{text::input}}"></textarea>
 
                 <div class="stv-btn stv-btn-shdw send" on-click="handleSendEmail">&nbsp; SEND</div>
                 <div id="Sending" hidden$="{{!sending}}">
@@ -112,6 +120,11 @@
                         }
                     });
                 }, 5000)
+            },
+            handleFeedback: function(e){
+              this.fire('feedbackend');
+              this.$.emailPanel.hidden=false;
+              this.$.emailPanel.style="top: 60px;left: 500px";
             }
         })
     </script>
