Add stv-launcher inside scaffold

--- a/src/stv-header.html
+++ b/src/stv-header.html
@@ -218,6 +218,9 @@
                     <span class="option-text"> Sign up </span>
                 </div>
 
+                <div id="launcher">
+                    <content select=".launcher"></content>
+                </div>
 
                 <div id="help">
                     <content select=".helpmenu"></content>
