--- a/src/stv-launcher/demo/index.html
+++ b/src/stv-launcher/demo/index.html
@@ -19,13 +19,13 @@
 
 <div class="container">
     <stv-launcher>
-        <span class="fa fa-th"></span>
+        <i class="fa fa-th"></i>
     </stv-launcher>
     <stv-launcher dropdown-position="centered">
-        <span class="fa fa-th"></span>
+        <i class="fa fa-th"></i>
     </stv-launcher>
     <stv-launcher dropdown-position="left">
-        <span class="fa fa-th"></span>
+        <i class="fa fa-th"></i>
     </stv-launcher>
 </div>
 
