Add shadow to the menu. Increment margin

--- a/src/stv-launcher/stv-launcher.html
+++ b/src/stv-launcher/stv-launcher.html
@@ -11,8 +11,10 @@
             div {
                 width: 150px;
                 height: 150px;
-                background-color: red;
+                background-color: grey;
                 position: absolute;
+                margin-top: 20px;
+                box-shadow: 3px 3px 3px rgba(0,0,0, 0.5);
             }
 
             .centered {
