Pass the data url through data-src

--- a/src/stv-launcher/demo/index.html
+++ b/src/stv-launcher/demo/index.html
@@ -18,13 +18,13 @@
 <body>
 
 <div class="container">
-    <stv-launcher>
+    <stv-launcher data-src="../apps.json">
         <i class="fa fa-th"></i>
     </stv-launcher>
-    <stv-launcher dropdown-position="centered">
+    <stv-launcher dropdown-position="centered" data-src="../apps.json">
         <i class="fa fa-th"></i>
     </stv-launcher>
-    <stv-launcher dropdown-position="left">
+    <stv-launcher dropdown-position="left" data-src="../apps.json">
         <i class="fa fa-th"></i>
     </stv-launcher>
 </div>
