Minor style changes. rename testing json file

--- a/src/stv-launcher/stv-launcher.html
+++ b/src/stv-launcher/stv-launcher.html
@@ -10,11 +10,13 @@
         <style>
             div {
                 width: 150px;
-                background-color: lightgrey;
+                background-color: #2F2F2F;
+                border: white solid 1px;
                 position: absolute;
                 margin-top: 20px;
                 box-shadow: 3px 3px 3px rgba(0,0,0, 0.5);
                 opacity: 0;
+                padding-right: 10px;
             }
 
 
