Improve layout. Add apps names. Add click handle

--- a/src/stv-launcher/demo/index.html
+++ b/src/stv-launcher/demo/index.html
@@ -21,10 +21,10 @@
     <stv-launcher data-src="../test-apps.json">
         <i class="fa fa-th"></i>
     </stv-launcher>
-    <stv-launcher dropdown-position="centered" data-src="../test-apps.json">
+    <stv-launcher  data-src="../test-apps.json">
         <i class="fa fa-th"></i>
     </stv-launcher>
-    <stv-launcher dropdown-position="left" data-src="../test-apps.json">
+    <stv-launcher data-src="../test-apps.json">
         <i class="fa fa-th"></i>
     </stv-launcher>
 </div>
